test/arrays/sparse/stridedBaseDom.good
A[(1, 1)] = 0.0
A[(5, 3)] = 0.0
stridedBaseDom.chpl:24: error: halt reached - Sparse domain/array index out of bounds: (2, 4) (expected to be within {1..10 by 2, 1..10 by 2})
